# api/handler/todo_handler.go
@@ -30,7 +30,7 @@ func (h *TodoHandler) CreateTodo(w http.ResponseWriter, r *http.Request) {
 	}
 
 	// 【変更】ビジネスロジックとDB保存はUsecaseに丸投げする
-	todo, err := h.todoUsecase.CreateTodo(r.Context(), req.Title, desc, req.AccountId)
+	todo, err := h.todoUsecase.CreateTodo(r.Context(), req.Title, desc, req.AccountId, *req.DueDate)
 	if err != nil {
 		h.respondWithError(w, http.StatusInternalServerError, "データの保存に失敗しました", []string{err.Error()})
 		return
@@ -40,6 +40,7 @@ func (h *TodoHandler) CreateTodo(w http.ResponseWriter, r *http.Request) {
 	res := TodoResponse{
 		Id:          int64(todo.ID),
 		Title:       todo.Title,
+		DueDate:     todo.DueDate,
 		Description: req.Description,
 		Completed:   todo.IsCompleted,
 		CreatedAt:   todo.CreatedAt,
